--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -93,17 +93,18 @@ header .nav-links li a:hover {
 }
 
 .services {
-  margin-left: 25px;
-  margin-right: 25px;
+  margin-left: 70px;
+  margin-right: 70px;
 }
 .services h2 {
   text-align: left;
-  margin-bottom: 20px;
+  margin-bottom: 10px;
   font-size: 2.5rem;
 }
 .services .services-grid {
   display: flex;
   gap: 20px;
+  height: 500px;
 }
 .services .services-grid .service-item {
   position: relative;
@@ -111,9 +112,10 @@ header .nav-links li a:hover {
   border-radius: 15px;
 }
 .services .services-grid .service-item img {
+  object-fit: cover;
+  object-position: center;
   width: 100%;
   height: 100%;
-  object-fit: cover;
   filter: brightness(0.7);
   transition: transform 0.3s ease;
 }
@@ -139,7 +141,7 @@ header .nav-links li a:hover {
 }
 .services .services-grid .large {
   flex: 1;
-  height: 100%;
+  width: 900px;
 }
 .services .services-grid .service-column {
   display: flex;
@@ -149,7 +151,187 @@ header .nav-links li a:hover {
 }
 .services .services-grid .service-column .small {
   flex: 1;
-  height: 100%;
+  width: 900px;
+}
+
+.features {
+  position: relative;
+  padding-bottom: 100px;
+  background-color: #f9f9f9;
+}
+.features .wave {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: auto;
+  z-index: 1;
+}
+.features .wave img {
+  width: 100%;
+  height: auto;
+}
+.features .features-content {
+  position: relative;
+  z-index: 2;
+  padding-top: 50px;
+  text-align: center;
+}
+.features .features-content h2 {
+  font-size: 2.5rem;
+  margin-bottom: 50px;
+  margin-right: 70px;
+  text-align: end;
+}
+.features .features-content .features-grid {
+  display: flex;
+  justify-content: space-around;
+  align-items: flex-start;
+  gap: 20px;
+  flex-wrap: wrap;
+}
+.features .features-content .features-grid .feature-item {
+  padding: 20px;
+  border-radius: 10px;
+  width: 30%;
+  text-align: center;
+}
+.features .features-content .features-grid .feature-item img {
+  width: 50px;
+  height: auto;
+  margin-bottom: 20px;
+}
+.features .features-content .features-grid .feature-item h3 {
+  font-size: 1.5rem;
+  margin-bottom: 15px;
+}
+.features .features-content .features-grid .feature-item p {
+  font-size: 1rem;
+  color: #666;
+}
+
+.cta-section {
+  position: relative;
+  background-color: #f0f0f0;
+  padding: 0;
+  z-index: 1;
+}
+.cta-section .cta-container {
+  position: relative;
+  background-color: #e57363;
+  padding: 40px;
+  max-width: 1200px;
+  margin: -50px auto 0 auto;
+  border-radius: 20px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.cta-section .cta-container h2 {
+  font-size: 2rem;
+  color: white;
+}
+.cta-section .cta-container p {
+  font-size: 1rem;
+  color: white;
+  margin-top: 10px;
+}
+.cta-section .cta-container .cta-button a {
+  background-color: white;
+  color: #333;
+  padding: 15px 25px;
+  border-radius: 5px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  text-decoration: none;
+  font-size: 1rem;
+  font-weight: bold;
+  transition: background-color 0.3s ease;
+}
+.cta-section .cta-container .cta-button a:hover {
+  background-color: #ddd;
+}
+.cta-section::before {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 100px;
+  background-color: #333;
+  z-index: -1;
+}
+
+footer {
+  background-color: #333;
+  color: white;
+  padding: 20px;
+}
+footer .footer-top {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-bottom: 20px;
+}
+footer .footer-top .logo {
+  display: flex;
+  align-items: center;
+}
+footer .footer-top .logo img {
+  width: auto;
+  height: 40px;
+  margin-right: 10px;
+}
+footer .footer-top .logo h1 {
+  font-size: 24px;
+  font-weight: bold;
+}
+footer .footer-top ul.footer-links {
+  display: flex;
+  list-style: none;
+}
+footer .footer-top ul.footer-links li {
+  margin-right: 20px;
+}
+footer .footer-top ul.footer-links li a {
+  color: white;
+  text-decoration: none;
+  font-size: 16px;
+}
+footer .footer-top ul.footer-links li a:hover {
+  color: #FF6F61;
+}
+footer hr {
+  border: none;
+  border-top: 1px solid #fff;
+  margin: 20px 0;
+}
+footer .footer-bottom {
+  display: flex;
+  justify-content: space-between;
+}
+footer .footer-bottom .address, footer .footer-bottom .contact, footer .footer-bottom .socials {
+  flex: 1;
+}
+footer .footer-bottom .address p, footer .footer-bottom .contact p, footer .footer-bottom .socials p {
+  margin: 5px 0;
+}
+footer .footer-bottom .socials {
+  display: flex;
+  justify-content: flex-end;
+}
+footer .footer-bottom .socials a {
+  color: white;
+  font-size: 20px;
+  margin-left: 15px;
+  text-decoration: none;
+}
+footer .footer-bottom .socials a img {
+  width: 35px;
+  transition: transform 0.3s ease-in-out;
+}
+footer .footer-bottom .socials a:hover img {
+  transform: translateY(-5px);
 }
 
 /*# sourceMappingURL=style.css.map */
