--- a/asset/scss/style.scss
+++ b/asset/scss/style.scss
@@ -113,26 +113,28 @@ header {
 // ----------- services -----------
 
 .services {
-    margin-left: 25px;
-    margin-right: 25px;
+    margin-left: 70px;
+    margin-right: 70px;
     h2 {
         text-align: left;
-        margin-bottom: 20px;
+        margin-bottom: 10px;
         font-size: 2.5rem;
     }
 
     .services-grid {
         display: flex;
         gap: 20px;
+        height: 500px;
 
         .service-item {
             position: relative;
             overflow: hidden;
             border-radius: 15px;
             img {
-                width: 100%;
-                height: 100%;
                 object-fit: cover;
+                object-position: center; 
+                width: 100%; 
+                height: 100%;
                 filter: brightness(0.7);
                 transition: transform 0.3s ease;
             }
@@ -160,7 +162,7 @@ header {
 
         .large {
             flex: 1;
-            height: 100%;
+            width: 900px;
         }
 
         .service-column {
@@ -171,8 +173,227 @@ header {
 
             .small {
                 flex: 1;
-                height: 100%;
+                width: 900px;
             }
         }
     }
 }
+
+// ----------- feathure -----------
+
+.features {
+    position: relative;
+    padding-bottom: 100px;
+    background-color: #f9f9f9; 
+
+    .wave {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: auto;
+        z-index: 1;
+        img {
+            width: 100%;
+            height: auto;
+        }
+    }
+
+    .features-content {
+        position: relative;
+        z-index: 2; 
+        padding-top: 50px;
+        text-align: center;
+
+        h2 {
+            font-size: 2.5rem;
+            margin-bottom: 50px;
+            margin-right: 70px;
+            text-align: end;
+        }
+
+        .features-grid {
+            display: flex;
+            justify-content: space-around;
+            align-items: flex-start;
+            gap: 20px;
+            flex-wrap: wrap;
+
+            .feature-item {
+                padding: 20px;
+                border-radius: 10px;
+                width: 30%; 
+                text-align: center;
+
+                img {
+                    width: 50px;
+                    height: auto;
+                    margin-bottom: 20px;
+                }
+
+                h3 {
+                    font-size: 1.5rem;
+                    margin-bottom: 15px;
+                }
+
+                p {
+                    font-size: 1rem;
+                    color: #666;
+                }
+            }
+        }
+    }
+}
+
+// ----------- contact ? -----------
+
+.cta-section {
+    position: relative;
+    background-color: #f0f0f0; 
+    padding: 0; 
+    z-index: 1; 
+
+    .cta-container {
+        position: relative;
+        background-color: #e57363; 
+        padding: 40px;
+        max-width: 1200px;
+        margin: -50px auto 0 auto; 
+        border-radius: 20px;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+
+        h2 {
+            font-size: 2rem;
+            color: white;
+        }
+
+        p {
+            font-size: 1rem;
+            color: white;
+            margin-top: 10px;
+        }
+
+        .cta-button {
+            a {
+                background-color: white;
+                color: #333;
+                padding: 15px 25px;
+                border-radius: 5px;
+                box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+                text-decoration: none;
+                font-size: 1rem;
+                font-weight: bold;
+                transition: background-color 0.3s ease;
+
+                &:hover {
+                    background-color: #ddd;
+                }
+            }
+        }
+    }
+
+    
+    &::before {
+        content: "";
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        height: 100px; 
+        background-color: #333; 
+        z-index: -1;
+    }
+}
+
+// ----------- footer -----------
+
+footer {
+    background-color: #333;
+    color: white;
+    padding: 20px;
+  
+    .footer-top {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding-bottom: 20px;
+  
+      .logo {
+        display: flex;
+        align-items: center;
+  
+        img {
+          width: auto;
+          height: 40px;
+          margin-right: 10px;
+        }
+  
+        h1 {
+          font-size: 24px;
+          font-weight: bold;
+        }
+      }
+  
+      ul.footer-links {
+        display: flex;
+        list-style: none;
+  
+        li {
+          margin-right: 20px;
+  
+          a {
+            color: white;
+            text-decoration: none;
+            font-size: 16px;
+  
+            &:hover {
+                color: #FF6F61;
+            }
+          }
+        }
+      }
+    }
+  
+    hr {
+      border: none;
+      border-top: 1px solid #fff;
+      margin: 20px 0;
+    }
+  
+    .footer-bottom {
+      display: flex;
+      justify-content: space-between;
+  
+      .address, .contact, .socials {
+        flex: 1;
+  
+        p {
+          margin: 5px 0;
+        }
+      }
+  
+      .socials {
+        display: flex;
+        justify-content: flex-end;
+      
+        a {
+          color: white;
+          font-size: 20px;
+          margin-left: 15px;
+          text-decoration: none;
+      
+          img {
+            width: 35px;
+            transition: transform 0.3s ease-in-out; 
+          }
+      
+          &:hover img {
+            transform: translateY(-5px); 
+          }
+        }
+      }
+    }
+  }
